# amdcovc

./: CMakeLists.txt  README.md  amdcovc.cpp  init.sh
cmake/: FindPCIUTILS.cmake
